--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.20",
+    "axios": "^0.25.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
