--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.20",
-    "axios": "^0.25.0",
+    "axios": "0.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "react-icons": "4.3.1",
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
+    "@types/styled-components": "5.1.20",
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
     "@vitejs/plugin-react": "1.0.7",
